# engram

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.claude/agents/: engram-reviewer.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
projectDocs/: JOURNAL.md
projectDocs/designs/: engram-architecture.md
projectDocs/plans/active/: engram-implementation.md
projectDocs/research/: 2026-04-01-hermes-agent-skill-system-analysis.md
scripts/: post-commit
src/engram/: __init__.py  cli.py  evaluator.py  formatting.py  fuzzy_patch.py  hooks.py  install.py  lifecycle.py  llm.py  models.py  reviewer.py  scanner.py  selector.py  store.py
src/engram/claude/skills/engram/: SKILL.md
src/engram/patterns/: __init__.py  credentials.yaml  filesystem.yaml  injection.yaml  network.yaml  obfuscation.yaml  prompt_injection.yaml  tool_abuse.yaml
src/engram/scripts/: pre-push
src/engram/templates/: engram.md.j2  skill.md.j2
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_evaluator.py  test_formatting.py  test_fuzzy_patch.py  test_hooks.py  test_import_export.py  test_install.py  test_lifecycle.py  test_llm.py  test_models.py  test_reviewer.py  test_scanner.py  test_selector.py  test_skill_export.py  test_store.py  test_transcript.py
tests/fixtures/sample_engrams/: run-migrations-before-restart.md
